k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-site
  annotations:
    redeploy-on-config-change: "2026-04-17T10:20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-site
  template:
    metadata:
      labels:
        app: simple-site
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: simple-site-html
