k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-site
spec:
  selector:
    app: simple-site
  ports:
  - port: 80
    targetPort: 80
