k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.miroslavlukac.sk
    secretName: simple-site-tls
  rules:
  - host: www.miroslavlukac.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-site
            port:
              number: 80
